# indexdesc_benchmark

./: .gitignore  CMakeLists.txt  main.cpp  readme.txt
doc/: descriptorstats.ods  report.tex
results/: audio_output.txt  ehd_output.txt  output_imgray.txt  output_omd.txt
